--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "logalot": "^2.1.0",
     "minimist": "^1.1.1",
     "multipipe": "^0.1.2",
+    "resolve-bin": "^0.3.0",
     "through2": "^0.6.3",
     "which": "^1.0.9"
   },
