--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "purescript"
   ],
   "dependencies": {
+    "glob": "^5.0.5",
     "gulp-util": "^3.0.4",
     "logalot": "^2.1.0",
     "minimist": "^1.1.1",
