Using cross-spawn as a drop-in for child_process
Until joyent/node#2318 is resolved, opting for `cross-spawn` instead of
using `child_process` directly to provide better windows compatibility.

Resolves #30

(cherry picked from commit 16f0539aa9f7279325ac80a07bf4b3fcd2d5a1a4)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "purescript"
   ],
   "dependencies": {
+    "cross-spawn": "^0.4.0",
+    "glob": "^5.0.5",
     "gulp-util": "^3.0.4",
     "logalot": "^2.1.0",
     "minimist": "^1.1.1",
