--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-purescript",
   "description": "Run the PureScript compiler",
-  "version": "0.5.0",
+  "version": "0.5.0-rc.1",
   "license": "MIT",
   "repository": "purescript-contrib/gulp-purescript",
   "author": {
