--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-purescript",
   "description": "Run the PureScript compiler",
-  "version": "0.5.0-rc.1",
+  "version": "0.5.0-rc.2",
   "license": "MIT",
   "repository": "purescript-contrib/gulp-purescript",
   "author": {
@@ -35,6 +35,7 @@
     "logalot": "^2.1.0",
     "minimist": "^1.1.1",
     "multipipe": "^0.1.2",
+    "promise": "^7.0.3",
     "resolve-bin": "^0.3.0",
     "through2": "^0.6.3",
     "which": "^1.0.9"
