--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "purescript"
   ],
   "dependencies": {
+    "async": "^1.3.0",
     "cross-spawn": "^0.4.0",
     "glob": "^5.0.5",
     "gulp-util": "^3.0.4",
