--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "dependencies": {
     "async": "^1.3.0",
+    "camelcase": "^1.1.0",
     "cross-spawn": "^0.4.0",
     "glob": "^5.0.5",
     "gulp-util": "^3.0.4",
