Remove --verbose argument
Since the compiler output is less verbose, this argument is no longer
necessary. Also, warnings were being hidden unless the argument was
provided.

Resolves #51

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:run": "node test.js | tap-spec",
     "test": "npm run-script build && npm run-script test:run",
     "build": "npm run-script build:compile && npm run-script build:docs && npm run-script build:package",
-    "build:compile": "./node_modules/.bin/pulp build",
+    "build:compile": "./node_modules/.bin/pulp build -o build",
     "build:docs": "./node_modules/.bin/pulp docs",
     "build:package": "./node_modules/.bin/webpack --progress --colors --profile --bail",
     "build:json": "./node_modules/.bin/webpack --progress --colors --profile --bail --json > index.json",
@@ -35,7 +35,6 @@
     "glob": "^5.0.5",
     "gulp-util": "^3.0.4",
     "logalot": "^2.1.0",
-    "minimist": "^1.1.1",
     "resolve-bin": "^0.3.0",
     "which": "^1.0.9"
   },
@@ -45,7 +44,6 @@
     "gulp-plumber": "^1.0.0",
     "json-loader": "^0.5.1",
     "pulp": "^4.3.0",
-    "rewire": "^2.3.1",
     "run-sequence": "^1.0.2",
     "tap-spec": "^2.2.2",
     "tape": "^3.5.0",
