--- a/package.json
+++ b/package.json
@@ -12,42 +12,34 @@
     "node": ">=0.10.0"
   },
   "files": [
-    "index.js"
+    "LICENSE",
+    "index.js",
+    "output"
   ],
   "scripts": {
-    "test:run": "node test.js | tap-spec",
-    "test": "npm run-script build && npm run-script test:run",
-    "build": "npm run-script build:compile && npm run-script build:docs && npm run-script build:package",
-    "build:compile": "./node_modules/.bin/pulp build -o build",
-    "build:docs": "./node_modules/.bin/pulp docs",
-    "build:package": "./node_modules/.bin/webpack --progress --colors --profile --bail",
-    "build:json": "./node_modules/.bin/webpack --progress --colors --profile --bail --json > index.json",
-    "prepublish": "npm run-script build"
+    "psc": "psc 'src/**/*.purs' 'bower_components/purescript-*/src/**/*.purs'",
+    "test": "npm run psc && (node test/test.js | tap-spec)",
+    "prepublish": "rm -r output && npm run psc"
   },
   "keywords": [
     "gulpplugin",
     "purescript"
   ],
   "dependencies": {
-    "async": "^1.3.0",
-    "camelcase": "^1.1.0",
-    "cross-spawn": "^0.4.0",
-    "glob": "^5.0.5",
-    "gulp-util": "^3.0.4",
+    "async": "^2.0.0-rc.5",
+    "camelcase": "^3.0.0",
+    "cross-spawn": "^4.0.0",
+    "glob": "^7.0.3",
+    "gulp-util": "^3.0.7",
     "logalot": "^2.1.0",
-    "resolve-bin": "^0.3.0",
-    "which": "^1.0.9"
+    "resolve-bin": "^0.4.0",
+    "which": "^1.2.9"
   },
   "devDependencies": {
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-plumber": "^1.0.0",
-    "json-loader": "^0.5.1",
-    "pulp": "^4.3.0",
-    "run-sequence": "^1.0.2",
-    "tap-spec": "^2.2.2",
-    "tape": "^3.5.0",
-    "through2": "^0.6.3",
-    "webpack": "^1.8.9"
+    "gulp": "^3.9.1",
+    "purescript": "^0.9.1-rc.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.5.1",
+    "through2": "^2.0.1"
   }
 }
